--- a/student_loans_with_deep_learning.ipynb
+++ b/student_loans_with_deep_learning.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0otrXpJc6q6u"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -641,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -724,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "OD7xwU_96q6z"
       },
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "BzD3z20m6q6z"
       },
@@ -1177,7 +1177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1207,7 +1207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "c_KXDLkF6q60"
       },
@@ -1225,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "63UdFncw6q60",
         "colab": {
@@ -1259,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1367,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "E-hZaeSn6q61"
       },
@@ -1380,7 +1380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1512,7 +1512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1549,7 +1549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "q0MetN0W6q61"
       },
@@ -1583,7 +1583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "OCET2mvW6q61"
       },
@@ -1607,7 +1607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1648,7 +1648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2043,7 +2043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2082,6 +2082,19 @@
         "---\n",
         "## Discuss creating a recommendation system for student loans"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. In order to create a student loan recommendation system for student loan options we would need data on the students finances like their monthly income, and monthly expenses. This is to determine what the best repayment option would be for this student, regarding timeframe, monthly payment and interest rate. This would be relevant because we want to pick a repayment option that won't put too much time pressure on the student borrower to repay in a timely manner, nor do we want them to pay too much interest over a long period of time if they can afford to make a higher monthly payment.\n",
+        "\n",
+        "2.I think context or content based filtering, or both would be appropriate. The reason for context filtering is because if one user has a similiar financial record as another then the recommender system could suggest the same repayment option for both these users. Furthremore, depending on the content of their financial records the reccommender system could suggest a repayment option that would be affordable for that user.\n",
+        "\n",
+        "3. Collecting accurate financial data can be difficult because this data is sensitive, and subject to fraud and theft. We would need to be trusted company, and show that we can properly secure this data. In addition, another difficulty is that people's financial situations could drastically change, and a recommendation system doesn't account for these finanical changes in one's life. You can't really collect data on whose likely to lose all their money or acquire a higher paying job in the following year of their repayment schedule."
+      ],
+      "metadata": {
+        "id": "7tmXK0dUDXVM"
+      }
     },
     {
       "cell_type": "markdown",
